# pencilcc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README  README.md  autogen.sh  cmdline.sh  configure.ac  get-antlr3.sh  get-polybench.sh  get-scala.sh  pencilcc  pencilcc.py  pencilcc.py.in  penciltool.py  penciltool.py.in
examples/cext/: example-ext.c  example.sh
examples/pencil/: example-opencl.h  example.c  example.pencil.c  example.sh
examples/practical/: practical.c  practical.sh
examples/practical-1-benchmark/: practical.c  practical.sh
examples/practical-2-assume/: practical  practical.c  practical.sh
examples/practical-3-summary/: practical.c
examples/practical-4-kill/: practical  practical.c
examples/practical-5-mem/: practical.c
examples/practical-6-memtag/: practical.c  practical.cl  practical.sh
m4/: ax_submodule_fwd.m4
tests/: __pencil_assume.c  check-assume-cuda.sh  check-assume-prl.sh  check-benchmark-prl.sh  check-cxx-cuda.sh  check-cxx-prl.sh  check-math-cuda.sh  check-math-prl.sh  check-multifile-cuda.sh  check-multifile-prl.sh  check-multilink-cuda.sh  check-multilink-prl.sh  check-pencil_npr_tag.sh  check-prl_alloc.sh  check-prl_manage.sh  check-prl_manage_dev.sh  check-prl_manage_host.sh  check-prl_mem_alloc.sh  check-prl_mem_fill.sh  check-simple-cuda.sh  check-simple-keep-cuda.sh  check-simple-keep.sh  check-simple-nativeexpr.sh  check-simple.sh  check-structbyval-cuda.sh  check-structbyval-prl.sh  check-summary.sh  multilink_kernel1.pencil.c  multilink_kernel2.pencil.c  multilink_main.c  pencil_npr_tag.c  polybench_test.sh.in  prl_alloc.c  prl_manage.c  prl_manage_dev.c  prl_manage_host.c  prl_mem_alloc.c  simple.c  structbyval.c  structbyval_ppcg.c  (+1 more)
tests/simple/: check.sh  example.c
